--- a/2019.11.09/商品排序/css/1.css
+++ b/2019.11.09/商品排序/css/1.css
@@ -4,7 +4,7 @@
   font-size: 16px;
 }
 body {
-  background: rgba(135, 206, 235, 0.3);
+  background: rgba(63, 162, 187, 0.3);
   color: #fff;
 }
 .box {
@@ -14,7 +14,7 @@ body {
 }
 nav {
   height: 50px;
-  background: skyblue;
+  background: rgb(94, 190, 194);
   line-height: 50px;
   text-align: center;
   display: flex;
