--- a/2019.11.09/商品排序/css/1.css
+++ b/2019.11.09/商品排序/css/1.css
@@ -4,7 +4,7 @@
   font-size: 16px;
 }
 body {
-  background: rgba(63, 162, 187, 0.3);
+  background: rgba(135, 206, 235, 0.3);
   color: #fff;
 }
 .box {
@@ -14,26 +14,12 @@ body {
 }
 nav {
   height: 50px;
-  background: rgb(94, 190, 194);
+  background: skyblue;
   line-height: 50px;
   text-align: center;
   display: flex;
   justify-content: space-around;
   align-items: center;
-}
-nav div {
-  display: inline-block;
-}
-nav div #sele {
-  display: inline-block;
-  height: 22px;
-}
-nav div #search {
-  display: inline-block;
-  background: #fff;
-  width: 50px;
-  border: none;
-  height: 22px;
 }
 nav .show {
   display: inline-block;
